--- a/pages/problemasT.html
+++ b/pages/problemasT.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/TDS/style/styles.css">
+    <link rel="stylesheet" href="../style/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Uchen&display=swap" rel="stylesheet">
@@ -36,64 +36,80 @@
       <div class="container">
         <h1 class="header__h1"> Videos Resubidos</h1>
         <div id="menu" class="header__menu">
-          <nav class="navegacion d-none d-md-block  justify-content-between">
-            <ul> 
-              <li><a href="../pages/VideosResubidos/shyvana.html">SHYVANA</a> </li>
+          <nav class="navegacion d-none d-md-block justify-content-between">
+            <ul>
+              <li>
+                <a href="../pages/VideosResubidos/shyvana.html">SHYVANA</a>
+              </li>
               <li><a href="../pages/VideosResubidos/pyke.html">PYKE</a></li>
               <li><a href="../pages/VideosResubidos/zed.html">ZED</a></li>
-              <li><a href="../pages/VideosResubidos/problemasT.html">PROBLEMAS T</a></li>
+              <li>
+                <a href="../pages/VideosResubidos/problemasT.html"
+                  >PROBLEMAS T</a
+                >
+              </li>
             </ul>
-          </nav>    
-          </div>
-      <div class="dropdown d-md-none">
-        <button
-  type="button"
-  class="btn btn-primary"
-  data-bs-toggle="modal"
-  data-bs-target="#staticBackdrop"
->
-  Videos Resubidos
-</button>
-<div
-  class="modal fade"
-  id="staticBackdrop"
-  data-bs-backdrop="static"
-  data-bs-keyboard="false"
-  tabindex="-1"
-  aria-labelledby="staticBackdropLabel"
-  aria-hidden="true"
->
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h3 class="modal-title" id="staticBackdropLabel">Videos Resubidos</h3>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
-          aria-label="Close"
-        ></button>
-      </div>
-      <div class="modal-body">
-        <div class="container">
-          <ul>
-            <li>
-              <a class="links" href="/TDS/pages/Videos resubidos/shyvana.html">Shyvana 3vs5</a>
-            </li>
-            <li><a class="links" href="/TDS/pages/Videos resubidos/pyke.html">Pyke R casi perfectas</a></li>
-            <li><a class="links" href="/TDS/pages/Videos resubidos/zed.html">Zed el mejor ninja</a></li>
-            <li>
-              <a class="links" href="/TDS/pages/Videos resubidos/problemasT.html"
-                >Problemas Tecnicos</a
-              >
-            </li>
-          </ul>
+          </nav>
         </div>
-      </div>
-    </div>
-  </div>
-</div>
-      </div> 
+        <div class="dropdown d-md-none">
+          <button
+            type="button"
+            class="btn btn-primary"
+            data-bs-toggle="modal"
+            data-bs-target="#staticBackdrop"
+          >
+            Videos Resubidos
+          </button>
+          <div
+            class="modal fade"
+            id="staticBackdrop"
+            data-bs-backdrop="static"
+            data-bs-keyboard="false"
+            tabindex="-1"
+            aria-labelledby="staticBackdropLabel"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3 class="modal-title" id="staticBackdropLabel">
+                    Videos Resubidos
+                  </h3>
+                  <button
+                    type="button"
+                    class="btn-close"
+                    data-bs-dismiss="modal"
+                    aria-label="Close"
+                  ></button>
+                </div>
+                <div class="modal-body">
+                  <div class="container">
+                    <ul>
+                      <li>
+                        <a class="links" href="./shyvana.html">Shyvana 3vs5</a>
+                      </li>
+                      <li>
+                        <a class="links" href="./pyke.html"
+                          >Pyke R casi perfectas</a
+                        >
+                      </li>
+                      <li>
+                        <a class="links" href="./zed.html"
+                          >Zed el mejor ninja</a
+                        >
+                      </li>
+                      <li>
+                        <a class="links" href="./problemasT.html"
+                          >Problemas Tecnicos</a
+                        >
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div> 
     </div>
       <br>
     </header>
