--- a/pages/pyke.html
+++ b/pages/pyke.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/TDS/style/styles.css" />
+    <link rel="stylesheet" href="../style/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -89,30 +89,20 @@
                   <div class="container">
                     <ul>
                       <li>
-                        <a
-                          class="links"
-                          href="/TDS/pages/Videos resubidos/shyvana.html"
-                          >Shyvana 3vs5</a
-                        >
+                        <a class="links" href="./shyvana.html">Shyvana 3vs5</a>
                       </li>
                       <li>
-                        <a
-                          class="links"
-                          href="/TDS/pages/Videos resubidos/pyke.html"
+                        <a class="links" href="./pyke.html"
                           >Pyke R casi perfectas</a
                         >
                       </li>
                       <li>
-                        <a
-                          class="links"
-                          href="/TDS/pages/Videos resubidos/zed.html"
+                        <a class="links" href="./zed.html"
                           >Zed el mejor ninja</a
                         >
                       </li>
                       <li>
-                        <a
-                          class="links"
-                          href="/TDS/pages/Videos resubidos/problemasT.html"
+                        <a class="links" href="./problemasT.html"
                           >Problemas Tecnicos</a
                         >
                       </li>
@@ -134,7 +124,7 @@
       <video
         poster="https://cdna.artstation.com/p/assets/images/images/017/195/370/large/hb-wang-pykee.jpg?1554997419"
         controls
-        src="/TDS/videos/PentaPyke.mp4"
+        src="../videos/PentaPyke.mp4"
         width="100%"
         height="100%"
       ></video>
