--- a/pages/ListaDeVideos.html
+++ b/pages/ListaDeVideos.html
@@ -38,10 +38,10 @@
         <div id="menu" class="header__menu">
           <nav class="navegacion d-none d-md-block  justify-content-between">
             <ul> 
-              <li><a href="../pages/VideosResubidos/shyvana.html">SHYVANA</a> </li>
-              <li><a href="../pages/VideosResubidos/pyke.html">PYKE</a></li>
-              <li><a href="../pages/VideosResubidos/zed.html">ZED</a></li>
-              <li><a href="../pages/VideosResubidos/problemasT.html">PROBLEMAS T</a></li>
+              <li><a href="./shyvana.html">SHYVANA</a> </li>
+              <li><a href="./pyke.html">PYKE</a></li>
+              <li><a href="./zed.html">ZED</a></li>
+              <li><a href="./problemasT.html">PROBLEMAS T</a></li>
             </ul>
           </nav>    
           </div>
@@ -78,12 +78,12 @@
         <div class="container">
           <ul>
             <li>
-              <a class="links" href="../pages/VideosResubidos/shyvana.html">Shyvana 3vs5</a>
+              <a class="links" href="./shyvana.html">Shyvana 3vs5</a>
             </li>
-            <li><a class="links" href="../pages/VideosResubidos/pyke.html">Pyke R casi perfectas</a></li>
-            <li><a class="links" href="../pages/VideosResubidos/zed.html">Zed el mejor ninja</a></li>
+            <li><a class="links" href="./pyke.html">Pyke R casi perfectas</a></li>
+            <li><a class="links" href="./zed.html">Zed el mejor ninja</a></li>
             <li>
-              <a class="links" href="../pages/VideosResubidos/problemasT.html"
+              <a class="links" href="./problemasT.html"
                 >Problemas Tecnicos</a
               >
             </li>
