--- a/pages/zed.html
+++ b/pages/zed.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/TDS/style/styles.css" />
+    <link rel="stylesheet" href="../style/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -89,24 +89,20 @@
                   <div class="container">
                     <ul>
                       <li>
-                        <a class="links" href="../VideosResubidos/shyvana.html"
-                          >Shyvana 3vs5</a
-                        >
+                        <a class="links" href="./shyvana.html">Shyvana 3vs5</a>
                       </li>
                       <li>
-                        <a class="links" href="../VideosResubidos/pyke.html"
+                        <a class="links" href="./pyke.html"
                           >Pyke R casi perfectas</a
                         >
                       </li>
                       <li>
-                        <a class="links" href="../VideosResubidos/zed.html"
+                        <a class="links" href="./zed.html"
                           >Zed el mejor ninja</a
                         >
                       </li>
                       <li>
-                        <a
-                          class="links"
-                          href="../VideosResubidos/problemasT.html"
+                        <a class="links" href="./problemasT.html"
                           >Problemas Tecnicos</a
                         >
                       </li>
@@ -128,7 +124,7 @@
       <video
         poster="../images/ATRAS.png"
         controls
-        src="/TDS/videos/11-7-la2-1011054702-01_RZ4mFXOK_72r5.mp4"
+        src="../videos/11-7-la2-1011054702-01_RZ4mFXOK_72r5.mp4"
         width="100%"
         height="100%"
       ></video>
