--- a/pages/zed.html
+++ b/pages/zed.html
@@ -122,7 +122,7 @@
         por vos mismo
       </p>
       <video
-        poster="../images/ATRAS.png"
+        poster="../images/Zed.png"
         controls
         src="../videos/11-7-la2-1011054702-01_RZ4mFXOK_72r5.mp4"
         width="100%"
