--- a/pages/problemasT.html
+++ b/pages/problemasT.html
@@ -34,17 +34,17 @@
   <body>
     <header class="header">
       <div class="container">
-        <h1 class="header__h1"> Videos Resubidos</h1>
+        <h1 class="header__h1">Videos Resubidos</h1>
         <div id="menu" class="header__menu">
           <nav class="navegacion d-none d-md-block justify-content-between">
             <ul>
               <li>
-                <a href="../pages/VideosResubidos/shyvana.html">SHYVANA</a>
+                <a href="./shyvana.html">SHYVANA</a>
               </li>
-              <li><a href="../pages/VideosResubidos/pyke.html">PYKE</a></li>
-              <li><a href="../pages/VideosResubidos/zed.html">ZED</a></li>
+              <li><a href="./pyke.html">PYKE</a></li>
+              <li><a href="./zed.html">ZED</a></li>
               <li>
-                <a href="../pages/VideosResubidos/problemasT.html"
+                <a href="./problemasT.html"
                   >PROBLEMAS T</a
                 >
               </li>
@@ -109,9 +109,9 @@
               </div>
             </div>
           </div>
-        </div> 
-    </div>
-      <br>
+        </div>
+      </div>
+      <br />
     </header>
     <div class="container">
       <p class="arial">
