--- a/pages/zed.html
+++ b/pages/zed.html
@@ -42,14 +42,12 @@
           <nav class="navegacion d-none d-md-block justify-content-between">
             <ul>
               <li>
-                <a href="../pages/VideosResubidos/shyvana.html">SHYVANA</a>
+                <a href="./shyvana.html">SHYVANA</a>
               </li>
-              <li><a href="../pages/VideosResubidos/pyke.html">PYKE</a></li>
-              <li><a href="../pages/VideosResubidos/zed.html">ZED</a></li>
+              <li><a href="./pyke.html">PYKE</a></li>
+              <li><a href="./zed.html">ZED</a></li>
               <li>
-                <a href="../pages/VideosResubidos/problemasT.html"
-                  >PROBLEMAS T</a
-                >
+                <a href="./problemasT.html">PROBLEMAS T</a>
               </li>
             </ul>
           </nav>
