--- a/pages/Integrantes.html
+++ b/pages/Integrantes.html
@@ -124,7 +124,7 @@
           <div class="Carta-derecho">
             <a href="https://www.instagram.com/caminoli96/" target="_blank">
               <img
-                src="/TDS/images/LaTurca.jpg"
+                src="../images/LaTurca.jpg"
                 width="200"
                 height="300"
                 alt="LA TURCA"
@@ -136,7 +136,7 @@
               target="_blank"
             >
               <img
-                src="/TDS/images/LaGargola.jpg"
+                src="../images/LaGargola.jpg"
                 width="200"
                 height="300"
                 alt="LA GARGOLA"
@@ -145,7 +145,7 @@
           <div class="Carta-izquierdo">
             <a href="https://www.instagram.com/yagoricci/" target="_blank"
               ><img
-                src="/TDS/images/ElRicci.jpg"
+                src="../images/ElRicci.jpg"
                 width="200"
                 height="300"
                 alt="El BUITRE"
@@ -154,7 +154,7 @@
           <div class="Carta-izquierdo">
             <a href="https://www.instagram.com/feliipeecg/" target="_blank">
               <img
-                src="/TDS/images/ElChirucito.jpg"
+                src="../images/ElChirucito.jpg"
                 width="200"
                 height="300"
                 alt="CHIRUCITO"
