--- a/index.html
+++ b/index.html
@@ -59,22 +59,22 @@
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="10000">
               <a href="./pages/charlemos.html" >
-                <img src="./images/botella1.png" class="d-block" width="100" alt="botella">
+                <img src="./images/botella1.png" class="d-block w-100" alt="botella">
               </a>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
               <a href="./pages/ListaDeVideos.html">
-                <img src="./images/copa.png" class="d-block" width="100" alt="copa">
+                <img src="./images/copa.png" class="d-block w-100" alt="copa">
               </a>
             </div>
             <div class="carousel-item">
               <a href="./pages/Integrantes.html">
-                <img src="./images/fernet.png" class="d-block" width="100" alt="fernet">
+                <img src="./images/fernet.png" class="d-block w-100" alt="fernet">
               </a>
             </div>
             <div class="carousel-item">
               <a href="https://www.twitch.tv/los_satanas" target="_blank" id="twitch">
-                <img src="./images/fondopioli.jpg" class="d-block" width="100" alt="canalTw">
+                <img src="./images/fondopioli.jpg" class="d-block w-100" alt="canalTw">
               </a>
             </div>
           </div>
@@ -88,7 +88,6 @@
           </button>
         </div>
       </div>
-
     </div> 
     <div class="container d-none d-md-block" >
       <div class="grid">
