--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
       <p>
         Sean todos bienvenidos a su futura taberna favorita, en donde vas a poder
         pasarte un rato para poder hablar con nosotros sobre todos los temas
-        actuales y no tan actuales (mientra sean picantes)
+        actuales y no tan actuales (mientra sean picantes).
       </p>
       <h2 class="container__h2">PASEN Y PIDANLE AL CANTINERO LO QUE QUIERAN</h2>
       <br>
-      <p>Pidiendole una botella de cerveza, seras invitado charlar con nosotros así podremos tomar en cuenta tu opinion en futuros strems</p>
-      <p>Tomando el daiquiri podras ver los videos resubidos de twitch</p>
-      <p>Escogiendo el fernet vas poder conocer a Los Satanás</p>
-      <p>Y clickando en nuestro icono de TW podras ir a nuestro canal rapidamente</p>
+      <p>Pidiendole una botella de cerveza, seras invitado charlar con nosotros así podremos tomar en cuenta tu opinion en futuras transmisiones.</p>
+      <p>Tomando el daiquiri podras ver los videos resubidos de twitch.</p>
+      <p>Escogiendo el fernet vas poder conocer a Los Satanás.</p>
+      <p>Y clickando en nuestro icono de TW podras ir a nuestro canal rapidamente.</p>
     </div>
     <div class="container dropdown d-md-none">
       <div class="container-carousel">
@@ -59,17 +59,17 @@
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="10000">
               <a href="./pages/charlemos.html" >
-                <img src="./images/botella1.png" class="d-block w-100" alt="botella">
+                <img src="./images/botella1a.png" class="d-block w-100"  alt="botella">
               </a>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
               <a href="./pages/ListaDeVideos.html">
-                <img src="./images/copa.png" class="d-block w-100" alt="copa">
+                <img src="./images/copa1.png" class="d-block w-100" alt="copa">
               </a>
             </div>
             <div class="carousel-item">
               <a href="./pages/Integrantes.html">
-                <img src="./images/fernet.png" class="d-block w-100" alt="fernet">
+                <img src="./images/fernet1.png" class="d-block w-100" alt="fernet">
               </a>
             </div>
             <div class="carousel-item">
