--- a/pages/Integrantes.html
+++ b/pages/Integrantes.html
@@ -48,7 +48,7 @@
       <p>
         <em
           >Si quieres conocernos mejor poder clickear sobre LA CARTA y te
-          llevara al correspondiente perfil de instagram
+          llevara al correspondiente perfil de instagram.
         </em>
       </p>
       <div class="container dropdown d-md-none">
@@ -62,8 +62,7 @@
               <a href="https://www.instagram.com/caminoli96/" target="_blank">
                 <img
                   src="../images/LaTurca.jpg"
-                  width="200"
-                  height="300"
+                  class="d-block w-100"
                   alt="LA TURCA"
               /></a>
             </div>
@@ -74,8 +73,7 @@
               >
                 <img
                   src="../images/LaGargola.jpg"
-                  width="200"
-                  height="300"
+                  class="d-block w-100"
                   alt="LA GARGOLA"
               /></a>
             </div>
@@ -83,8 +81,7 @@
               <a href="https://www.instagram.com/yagoricci/" target="_blank"
                 ><img
                   src="../images/ElRicci.jpg"
-                  width="200"
-                  height="300"
+                  class="d-block w-100"
                   alt="El BUITRE"
               /></a>
             </div>
@@ -92,8 +89,7 @@
               <a href="https://www.instagram.com/feliipeecg/" target="_blank">
                 <img
                   src="../images/ElChirucito.jpg"
-                  width="200"
-                  height="300"
+                  class="d-block w-100"
                   alt="CHIRUCITO"
                 />
               </a>
