--- a/pages/ListaDeVideos.html
+++ b/pages/ListaDeVideos.html
@@ -105,8 +105,7 @@
     </header>
     <div class="container">
         <p>
-          Si no pudiste estar en el directo, aca te dejamos los mejores momentos/ jugadas para que las puedas disfrutar
-        </p>
+          Si no pudiste estar en el directo, aca te dejamos los mejores momentos/ jugadas para que las puedas disfrutar.</p>
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
           <div class="carousel-item" data-bs-interval="100">
