--- a/pages/pyke.html
+++ b/pages/pyke.html
@@ -123,7 +123,7 @@
     <div class="container">
       <p class="arial">
         Bendito sea jugar con amigos, ya que te facilitan logar esta joyita de
-        jugada
+        jugada.
       </p>
       <video
         poster="https://cdna.artstation.com/p/assets/images/images/017/195/370/large/hb-wang-pykee.jpg?1554997419"
