--- a/pages/shyvana.html
+++ b/pages/shyvana.html
@@ -123,7 +123,7 @@
     <div class="container">
       <p class="arial">
         Alguna vez te tocó jugar con 2 compañeros menos en tu equipo? No te
-        hagas problema ya que una dragona con criticos te gana sola la partida
+        hagas problema ya que una dragona con criticos te gana sola la partida.
       </p>
       <video
         poster="https://pbs.twimg.com/media/CiNHibOWEAAgG3n.jpg"
