--- a/pages/zed.html
+++ b/pages/zed.html
@@ -123,7 +123,7 @@
     <div class="container">
       <p class="arial">
         En esta jugada podemos ver como el Ninja se hace una .... mejor miralo
-        por vos mismo
+        por vos mismo.
       </p>
       <video
         poster="../images/Zed.png"
