--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style/styles.css">
-    <title>Cantinero</title>
+    <meta name="description" content="Tu taberna de confianza">
+    <meta name="keywords" content="taberna, twitch, LOL, sitioEstatico, tragos, wed">
+    <title>Tu taberna de confianza</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
