--- a/pages/charlemos.html
+++ b/pages/charlemos.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="../style/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Yomogi&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Yomogi&display=swap"rel="stylesheet"/>
+    <meta name="description" content="Sitio para ver las opiniones de viewers">
+    <meta name="keywords" content="taberna, twitch, opiniones, sitioEstatico, preguntasRapidas, wed">
     <title>Charlemos</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
