--- a/pages/problemasT.html
+++ b/pages/problemasT.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Uchen&display=swap" rel="stylesheet">
+    <meta name="description" content="Videos Resubidos en donde se ven los errores que ocurrieron en el directo">
+    <meta name="keywords" content="taberna, twitch, LOL, sitioEstatico, tragos, wed, pentakills, erroresTecnicos">
     <title>Videos Resubidos</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
