--- a/pages/pyke.html
+++ b/pages/pyke.html
@@ -11,6 +11,14 @@
       href="https://fonts.googleapis.com/css2?family=Uchen&display=swap"
       rel="stylesheet"
     />
+    <meta
+      name="description"
+      content="Videos Resubidos de la pentakill de Pyke en un aram"
+    />
+    <meta
+      name="keywords"
+      content="taberna, twitch, LOL, sitioEstatico, wed, pentakills, pyke"
+    />
     <title>Videos Resubidos</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
