--- a/pages/shyvana.html
+++ b/pages/shyvana.html
@@ -11,6 +11,14 @@
       href="https://fonts.googleapis.com/css2?family=Uchen&display=swap"
       rel="stylesheet"
     />
+    <meta
+      name="description"
+      content="Es la pentakill de Shyvana ocurrida en la season 6 en un 3vs5 "
+    />
+    <meta
+      name="keywords"
+      content="taberna, twitch, LOL, sitioEstatico, wed, pentakills, shyvana, dragona"
+    />
     <title>Videos Resubidos</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
