--- a/pages/zed.html
+++ b/pages/zed.html
@@ -11,6 +11,14 @@
       href="https://fonts.googleapis.com/css2?family=Uchen&display=swap"
       rel="stylesheet"
     />
+    <meta
+      name="description"
+      content="Espacio para ver la casi penta de Zed en una ranked"
+    />
+    <meta
+      name="keywords"
+      content="taberna, twitch, LOL, sitioEstatico, zed, wed, pentakills, ninja"
+    />
     <title>Videos Resubidos</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
