--- a/pages/charlemos.html
+++ b/pages/charlemos.html
@@ -7,9 +7,18 @@
     <link rel="stylesheet" href="../style/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Yomogi&display=swap"rel="stylesheet"/>
-    <meta name="description" content="Sitio para ver las opiniones de viewers">
-    <meta name="keywords" content="taberna, twitch, opiniones, sitioEstatico, preguntasRapidas, wed">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Yomogi&display=swap"
+      rel="stylesheet"
+    />
+    <meta
+      name="description"
+      content="Sitio para ver las opiniones de viewers"
+    />
+    <meta
+      name="keywords"
+      content="taberna, twitch, opiniones, sitioEstatico, preguntasRapidas, wed"
+    />
     <title>Charlemos</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -55,130 +64,73 @@
       <div class="container">
         <legend>REGISTRO</legend>
         <div class="row">
-          <label for="user" class="col-sn-4 col-md-4 col-lg-6">Usuario</label>
-          <input
-            type="text"
-            class="col-sn-4 col-md-6 col-lg-6"
-            id="user"
-            name="user"
-          />
-          <label for="email" class="col-sn-4 col-md-4 col-lg-6"
-            >Correo electronico</label
-          >
-          <input type="email" class="col-sn-4 col-md-6 col-lg-6 id="email"
-          name="email" />
-          <label for="password" class="col-sn-4 col-md-4 col-lg-6"
-            >Contraseña</label
-          >
-          <input type="password" class="col-sn-4 col-md-6 col-lg-6 id="password"
-          name="password" />
+          <label for="user">Usuario</label>
+          <input type="text" id="user" name="user" />
+          <label for="email">Correo electronico</label>
+          <input type="email" id="email" name="email" />
+          <label for="password">Contraseña</label>
+          <input type="password" id="password" name="password" />
         </div>
       </div>
       <br />
       <div class="container">
-        <fieldset>
-          <legend>GENERO</legend>
-          <label for="femenino">Femenino</label>
-          <input type="radio" id="femenino" name="genero" value="fem" />
-          <br />
-          <label for="masculino">Masculino</label>
-          <input type="radio" id="masculino" name="genero" value="masc" />
-          <br />
-          <label for="otro">Otro</label>
-          <input type="radio" id="otro" name="genero" value="otro" />
-        </fieldset>
+        <legend>Genero</legend>
+        <div class="row">
+          <select name="Estuviste en el ultimo directo">
+            <option value="Femenino">Femenino</option>
+            <option value="Masculino">Masculino</option>
+            <option value="Otro">Otro</option>
+          </select>
+        </div>
+        <br />
+        <legend>Estuviste en el ultimo directo?</legend>
+        <div class="row">
+          <select name="Estuviste en el ultimo directo">
+            <option value="Si">Obvio</option>
+            <option value="No">No pude</option>
+          </select>
+        </div>
+        <br />
+        <legend>Te gustó el ultimo directo?</legend>
+        <div class="row">
+          <select name="Te gustó el ultimo directo">
+            <option value="Si">Estuvo bueno</option>
+            <option value="NoMucho">Estuvo medio flojo</option>
+            <option value="No">No me gusto</option>
+            <option value="NoEstuve">No lo pude ver</option>
+          </select>
+        </div>
+        <br />
+        <legend>El Proximo Directo tiene que ser de......</legend>
+        <div class="row">
+          <select name="ProximoTema">
+            <option value="SuperHeroes">Alguna Peli de SuperHeroes</option>
+            <option value="Teatro">Alguna recomendacion teatral</option>
+            <option value="TemaMomentario">Lo mas picante de la semana</option>
+          </select>
+        </div>
+        <br />
       </div>
       <br />
-      <!-- Button trigger modal -->
-      <button
-        type="button"
-        class="btn btn-primary"
-        data-bs-toggle="modal"
-        data-bs-target="#staticBackdrop"
-      >
-        Preguntas Rapidas
-      </button>
-
-      <!-- Modal -->
-      <div
-        class="modal fade"
-        id="staticBackdrop"
-        data-bs-backdrop="static"
-        data-bs-keyboard="false"
-        tabindex="-1"
-        aria-labelledby="staticBackdropLabel"
-        aria-hidden="true"
-      >
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h3 class=" container__h3 modal-title" id="staticBackdropLabel">
-                Preguntas Rapidas
-              </h3>
-              <button
-                type="button"
-                class="btn-close"
-                data-bs-dismiss="modal"
-                aria-label="Close"
-              ></button>
-            </div>
-            <div class="modal-body">
-
-              <div class="container">
-                <legend>Estuviste en el ultimo directo?</legend>
-                <div class="row">
-                  <select name="Estuviste en el ultimo directo">
-                    <option value="Si">Obvio</option>
-                    <option value="No">No pude</option>
-                  </select>
-                </div>
-                <br />
-                <legend>Te gustó el ultimo directo?</legend>
-                <div class="row">
-                  <select name="Te gustó el ultimo directo">
-                    <option value="Si">Estuvo bueno</option>
-                    <option value="NoMucho">Estuvo medio flojo</option>
-                    <option value="No">No me gusto</option>
-                    <option value="NoEstuve">No lo pude ver</option>
-                  </select>
-                </div>
-                <br />
-                <legend>El Proximo Directo tiene que ser de......</legend>
-                <div class="row">
-                  <select name="ProximoTema">
-                    <option value="SuperHeroes">Alguna Peli de SuperHeroes</option>
-                    <option value="Teatro">Alguna recomendacion teatral</option>
-                    <option value="TemaMomentario">Lo mas picante de la semana</option>
-                  </select>
-                </div>
-                <br />
-              </div>
-              <br />
-              <div class="container">Acepto enviar este formulario
-                <input type="checkbox" name="acepto" value="1" />
-              </div>
-            </form>
-            </div>
-            <div class="modal-footer">
-              <button
-                type="button"
-                class="btn btn-secondary"
-                data-bs-dismiss="modal"
-              >
-                Cerrar
-              </button>
-              <button type="submit" value="Send" class="btn btn-primary">
-                Enviar
-              </button>
-            </div>
-          </div>
-        </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+          Cerrar
+        </button>
+        <button type="submit" value="Send" class="btn btn-primary">
+          Enviar
+        </button>
       </div>
-<br>
-<br>
+    </form>
+
     <footer>
       <div class="container">
-        <a href="../index.html"><img src="../images/ATRAS.png" width="200"height="150"alt="volvamos al menu"/></a>
+        <a href="../index.html"
+          ><img
+            src="../images/ATRAS.png"
+            width="200"
+            height="150"
+            alt="volvamos al menu"
+        /></a>
       </div>
     </footer>
   </body>
