--- a/pages/charlemos.html
+++ b/pages/charlemos.html
@@ -66,15 +66,9 @@
         <div class="row">
           <label for="user">Usuario</label>
           <input type="text" id="user" name="user" />
-          <label for="email">Correo electronico</label>
-          <input type="email" id="email" name="email" />
-          <label for="password">Contraseña</label>
-          <input type="password" id="password" name="password" />
         </div>
-      </div>
-      <br />
-      <div class="container">
-        <legend>Genero</legend>
+        <br />
+        <legend>Género</legend>
         <div class="row">
           <select name="Estuviste en el ultimo directo">
             <option value="Femenino">Femenino</option>
@@ -107,6 +101,22 @@
             <option value="SuperHeroes">Alguna Peli de SuperHeroes</option>
             <option value="Teatro">Alguna recomendacion teatral</option>
             <option value="TemaMomentario">Lo mas picante de la semana</option>
+          </select>
+        </div>
+        <br />
+        <legend>A que jugamos el proximo directo?</legend>
+        <div class="row">
+          <select name="Proximo Juego">
+            <option value="LOL">League of Leguens</option>
+            <option value="Valorant">Valorant</option>
+            <option value="Minecraft">Minecraft</option>
+            <option value="GTA">GTA</option>
+            <option value="Rocket">Rocket League</option>
+            <option value="Fifa">FIFA</option>
+            <option value="GI">Genshin Impact</option>
+            <option value="FN">Fornite</option>
+            <option value="COD">Call Of Duty</option>
+            <option value="Otro">Otro</option>
           </select>
         </div>
         <br />
